--- a/demo/src/components/meta.scss
+++ b/demo/src/components/meta.scss
@@ -27,7 +27,7 @@ body {
     --bg-cr: #101623;
     --fr-cr: #ebebf5;
     --pl-cr: #adadad;
-    --br-cr: #5555;
+    --br-cr: #666e;
     --bx-sd-l1: 0 0 4px #3335;
     --bx-sd-l3: 0 0 6px #000a;
     .markdown-body {
